--- a/src/index.css
+++ b/src/index.css
@@ -78,3 +78,9 @@ img.img-fluid:hover {
   transform: scale(1.1);
   transition: all 0.2s ease-in-out;
 }
+
+.contact-us-section {
+  /* background-size: cover;
+  background-position: center; */
+  padding: 80px 0;
+}
