--- a/src/index.css
+++ b/src/index.css
@@ -84,3 +84,11 @@ img.img-fluid:hover {
   background-position: center; */
   padding: 80px 0;
 }
+
+.testimonials {
+  color: rgb(180, 6, 6);
+}
+
+.bg-gray {
+  background-color: #f2f2f2;
+}
