--- a/src/index.css
+++ b/src/index.css
@@ -96,9 +96,11 @@ img.img-fluid:hover {
 
 @media (max-width: 768px) {
   .img-small-devices {
+    /*
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: scroll; 
+    */
   }
 }
